Fix image path in theater popup HTML
Updated image source path for theater popup.

--- a/homework2/leaflet_homework/index.html
+++ b/homework2/leaflet_homework/index.html
@@ -39,7 +39,7 @@
     popupAnchor: [0,0]
     });
 
-var theaterPopup = "Théâtre Silvain<br/><img src='images/myphoto.jpeg' width='100px'/>";
+var theaterPopup = "Théâtre Silvain<br/><img src='./images/myphoto.jpeg' width='100px'/>";
 
 L.marker([43.281743, 5.355072], { icon: theaterIcon })
   .addTo(map)
