--- a/test2/index.html
+++ b/test2/index.html
@@ -32,7 +32,7 @@
     L.tileLayer('https://{s}.tile.opentopomap.org/{z}/{x}/{y}.png', {}).addTo(map)
 
     var hurricaneIcon = L.icon({
-        iconUrl: './data/hurricane_PNG10.png',
+        iconUrl: 'https://www.pikpng.com/pngl/m/241-2412284_hurricane-symbol-red-transparent-clipart.png',
     iconSize: [40,40],
     popupAnchor: [0,0]
     });
